@@ -41,6 +41,7 @@
 #' @param showColPerc If \code{TRUE}, column percentage values are shown.
 #' @param showObserved If \code{TRUE}, observed values are shown.
 #' @param showExpected If \code{TRUE}, expected values are also shown.
+#' @param showTotalN If \code{TRUE}, column and row sums are also shown, even if \code{showObserved} is \code{FALSE}.
 #' @param showHorizontalLine If \code{TRUE}, data rows are separated with a horizontal line.
 #' @param showSummary If \code{TRUE} (default), a summary row with Chi-square statistics (see \code{\link{chisq.test}}),
 #'          Cramer's V or Phi-value etc. is shown. If a cell contains expected values lower than five (or lower than 10 
@@ -182,6 +183,7 @@ sjt.xtab <- function (var.row,
                       showRowPerc=FALSE,
                       showColPerc=FALSE,
                       showExpected=FALSE,
+                      showTotalN=FALSE,
                       showHorizontalLine=FALSE,
                       showSummary=TRUE,
                       showLegend=TRUE,
@@ -617,7 +619,7 @@ sjt.xtab <- function (var.row,
     # -------------------------------------
     # first table cell data contains observed values
     # -------------------------------------
-    if (showObserved) {
+    if (showObserved || showTotalN) {
       cellstring <- sprintf("<span class=\"td_n\">%i</span>", rowSums(tab)[irow])
     }
     # if we have expected values, add them to table cell
@@ -665,7 +667,7 @@ sjt.xtab <- function (var.row,
     # -------------------------------------
     # add total row, first table cell data contains observed values
     # -------------------------------------
-    if (showObserved) {
+    if (showObserved || showTotalN) {
       cellstring <- sprintf("<span class=\"td_n\">%i</span>", colSums(tab)[icol])
     }
     # calculate total percentage value
@@ -700,7 +702,7 @@ sjt.xtab <- function (var.row,
   # -------------------------------------
   # add total row, first table cell data contains observed values
   # -------------------------------------
-  if (showObserved) cellstring <- sprintf("%s", sum(tab))
+  if (showObserved || showTotalN) cellstring <- sprintf("%s", sum(tab))
   if (showExpected) {
     if (nchar(cellstring) > 0) cellstring <- paste0(cellstring, "<br>")
     cellstring <- paste(cellstring, sprintf("%s", sum(tab.expected)), sep="")
